@@ -1,0 +1,3 @@
+ntdll.dll RtlAllocateHeap@12
+ntdll.dll RtlFreeHeap@12
+msvcrt.dll  printf
